# Translator

./: .gitignore  README.md  TASK.md  pyproject.toml  pytest.ini  requirements.txt
.github/prompts/: guidelines.prompt.md
assets/: .gitkeep
config/: default.yaml  schema.yaml
scripts/: build.py  run_dev.py  test_ocr_pipeline.py
src/translator/: __init__.py  app.py  main.py
src/translator/capture/: __init__.py  diff.py  geometry.py  region.py  screen.py
src/translator/core/: __init__.py  config.py  event_bus.py  scheduler.py  state.py
src/translator/input/: __init__.py  clipboard.py  hotkey.py  text_replace.py
src/translator/ocr/: __init__.py  engine.py  paddle.py  preprocess.py
src/translator/platform/: windows.py
src/translator/services/: __init__.py  monitor_service.py  ocr_service.py  translate_service.py
src/translator/translate/: __init__.py  base.py  llm.py  prompt.py  router.py
src/translator/ui/: __init__.py  main_window.py  overlay.py  region_selector.py  tray.py
src/translator/utils/: __init__.py  exceptions.py  logger.py  timing.py
tests/: test_capture.py  test_config.py  test_diff.py  test_monitor_service.py  test_ocr.py  test_prompt.py  test_state.py  test_translate.py
