[project]
name = "translator"
version = "0.1.0"
description = "Game overlay OCR + LLM translator"
authors = [{ name = "User" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"PyQt6>=6.10.0",
	"mss>=6.2.0",
	"paddleocr>=2.6.0",
	"Pillow>=10.0.0",
	"rich>=13.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-qt>=4.2.0", "flake8>=6", "mypy>=1.11"]

[project.scripts]
translator = "translator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


