[project]
name = "translator"
version = "0.1.0"
description = "Game overlay OCR + LLM translator"
authors = [{ name = "User" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"PyQt6>=6.10.0",
	"mss>=6.2.0",
	"Pillow>=10.0.0",
	"rich>=13.3.0",
	"numpy>=1.26.0",
	"opencv-python-headless>=4.8.0",
	"PyYAML>=6.0",
	"pynput>=1.7.6",
	"openai>=2.11.0",
	"pyperclip>=1.11.0",
	"paddlepaddle>=3.2.2",
	"onnxruntime-directml>=1.23.0",
	"pyclipper>=1.4.0",
	"shapely>=2.1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-qt>=4.2.0", "flake8>=6", "mypy>=1.11"]

[project.scripts]
translator = "translator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


